--- a/CoronaVirusApi/homepage.html
+++ b/CoronaVirusApi/homepage.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>HOME PAGE</title>
 </head>
 <body>
-    <H1>prova</H1>
+    <H1>DATI COVID REAL TIME</H1>
 </body>
 </html>
