--- a/CoronaVirusApi/homepage.html
+++ b/CoronaVirusApi/homepage.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <title>HOME PAGE</title>
-</head>
-<body>
-    <H1>DATI COVID REAL TIME</H1>
-</body>
+    </head> <body>
+    <div class="contianer">
+        <h2>COVID-19 cases in
+            <span id="country"></span><img src="" id="flag">
+            </h2> <div class="board">
+            <div class="card a">
+                <i class="fa fa-tachometer" ></i> T <h5>Active Cases</h5>
+                    <span id-"active"></span> </div>
+                    <div class="card ca">
+                        <i class="fa fa-th-list"></i> <h5>Totoal Cases</h5>
+                        «spanid="cases"></span> </div>
+                        <div class=
+                        "card cr">
+                        <i class="fa fa-times-circle" ></i> <h5>Critical Cases</h5>
+                            <span id="critical
+                            "></span>
+                    </div>
+                    <div class="card d">
+                        <i class="fa fa-times-circle" >/i> <h5>Critical Cases</h5>
+                            <span id="critical
+                            "></span>
+                    </div>
+
+                    </body>
+
 </html>
