impostazioni tabella output

--- a/CoronaVirusApi/homepage.html
+++ b/CoronaVirusApi/homepage.html
@@ -8,29 +8,38 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <title>HOME PAGE</title>
-    </head> <body>
+
+</head>
+<body>
     <div class="contianer">
-        <h2>COVID-19 cases in
-            <span id="country"></span><img src="" id="flag">
-            </h2> <div class="board">
-            <div class="card a">
-                <i class="fa fa-tachometer" ></i> T <h5>Active Cases</h5>
-                    <span id-"active"></span> </div>
-                    <div class="card ca">
-                        <i class="fa fa-th-list"></i> <h5>Totoal Cases</h5>
-                        «spanid="cases"></span> </div>
-                        <div class=
-                        "card cr">
-                        <i class="fa fa-times-circle" ></i> <h5>Critical Cases</h5>
-                            <span id="critical
-                            "></span>
-                    </div>
-                    <div class="card d">
-                        <i class="fa fa-times-circle" >/i> <h5>Critical Cases</h5>
-                            <span id="critical
-                            "></span>
-                    </div>
+        <h2>COVID-19 cases in <span id=-"country' "></span><img src=11 id=" flag"></h2>
+        <div class="board">
+            <div class="card a"><i class="fa fa-tachometer"></i>
+                <h5>Positivi</h5>
+                <span id="active"></span>
+            </div>
 
-                    </body>
+            <div class="card ca"><i class="fa fa-th-list"></i>
+                <h5>Casi Totali</h5> 
+                <span id="cases"></span>
+            </div>
 
-</html>
+            <div class="card cr"><i class="fa fa-times-circle"></i>
+                <h5>Casi Critici</h5>
+                <span id="critical"></span>
+            </div>
+
+            <div class="card d"><i class="fa fa-times"></i>
+                <h5>Morti</h5>
+                <span id="death"></span>
+            </div>
+
+            <div class="card r"><i class="fa fa-check-square"></i>
+                <h5>Casi Ricoverati</h5>
+                <span id="recovered"></span>
+            </div>
+</div>
+</div>
+</div>
+</body>
+</htmls
