--- a/CoronaVirusApi/homepage.html
+++ b/CoronaVirusApi/homepage.html
@@ -38,6 +38,11 @@
                 <h5>Casi Ricoverati</h5>
                 <span id="recovered"></span>
             </div>
+
+            <div class="card t"><i class="fa fa-eye"></i>
+                <h5>Test Totali Fatti</h5>
+                <span id="tests"></span>
+            </div>
 </div>
 </div>
 </div>
