--- a/CoronaVirusApi/homepage.html
+++ b/CoronaVirusApi/homepage.html
@@ -55,9 +55,12 @@ fetch("http://corona.lmao.ninja/v2/countries/Nepal")
 })
 .then((data)=>{
     document.getElementById("flag").src = data.countryInfo.flag;
-    document.getElementById("flag").src = data.countryInfo.flag;
-    document.getElementById("flag").src = data.countryInfo.flag;
-    document.getElementById("flag").src = data.countryInfo.flag;
-    document.getElementById("flag").src = data.countryInfo.flag;
+    document.getElementById("country").innerHTML = data.country;
+    document.getElementById("cases").innerHTML = data.cases;
+    document.getElementById("critical").innerHTML = data.critical;
+    document.getElementById("death").innerHTML = data.death;
+    document.getElementById("recovered").innerHTML = data.recovered;
+    document.getElementById("tests").innerHTML = data.tests;
+    document.getElementById("active").innerHTML = data.active;
 })
 </script>
