--- a/CoronaVirusApi/homepage.html
+++ b/CoronaVirusApi/homepage.html
@@ -5,13 +5,15 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+        <script src="https://use.fontawesome.com/34ccbaa830.js"></script>
+        <link rel="stylesheet" href="https://use.fontawesome.com/b0710f5540.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="style.css">
         <title>HOME PAGE</title>
     </head>
 
     <body>
-        <div class="contianer">
+        <div class="container">
             <h2>COVID-19 cases in <span id="country"></span><img src=11 id=" flag"></h2>
             <div class="board">
                 <div class="card a"><i class="fa fa-tachometer"></i>
@@ -49,18 +51,18 @@
 </html>
 
 <script type="text/javascript">
-fetch("http://corona.lmao.ninja/v2/countries/Nepal")
-.then((Response)=>{
-    return Response.json();
-})
-.then((data)=>{
-    document.getElementById("flag").src = data.countryInfo.flag;
-    document.getElementById("country").innerHTML = data.country;
-    document.getElementById("cases").innerHTML = data.cases;
-    document.getElementById("critical").innerHTML = data.critical;
-    document.getElementById("death").innerHTML = data.death;
-    document.getElementById("recovered").innerHTML = data.recovered;
-    document.getElementById("tests").innerHTML = data.tests;
-    document.getElementById("active").innerHTML = data.active;
-})
+    fetch("https://corona.lmao.ninja/v2/countries/USA")
+    .then((Response)=>{
+        return Response.json();
+    })
+    .then((data)=>{
+        document.getElementById("flag").src = data.countryInfo.flag;
+        document.getElementById("country").innerHTML = data.country;
+        document.getElementById("cases").innerHTML = data.cases;
+        document.getElementById("critical").innerHTML = data.critical;
+        document.getElementById("death").innerHTML = data.death;
+        document.getElementById("recovered").innerHTML = data.recovered;
+        document.getElementById("tests").innerHTML = data.tests;
+        document.getElementById("active").innerHTML = data.active;
+    })
 </script>
