--- a/CoronaVirusApi/homepage.html
+++ b/CoronaVirusApi/homepage.html
@@ -14,7 +14,7 @@
 
     <body>
         <div class="container">
-            <h2>COVID-19 cases in <span id="country"></span><img src=11 id=" flag"></h2>
+            <h2>CASI COVID-19 IN <span id="country"></span><img src=11 id=" flag"></h2>
             <div class="board">
                 <div class="card a"><i class="fa fa-tachometer"></i>
                     <h5>Positivi</h5>
@@ -51,18 +51,11 @@
 </html>
 
 <script type="text/javascript">
-    fetch("https://corona.lmao.ninja/v2/countries/USA")
-    .then((Response)=>{
-        return Response.json();
+    fetch("https://corona.lmao.ninja/v2/countries/India")
+    .then((response)=>{
+        return response.json();
     })
     .then((data)=>{
-        document.getElementById("flag").src = data.countryInfo.flag;
-        document.getElementById("country").innerHTML = data.country;
-        document.getElementById("cases").innerHTML = data.cases;
-        document.getElementById("critical").innerHTML = data.critical;
-        document.getElementById("death").innerHTML = data.death;
-        document.getElementById("recovered").innerHTML = data.recovered;
-        document.getElementById("tests").innerHTML = data.tests;
-        document.getElementById("active").innerHTML = data.active;
+        console.log(data);
     })
 </script>
