--- a/CoronaVirusApi/homepage.html
+++ b/CoronaVirusApi/homepage.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://use.fontawesome.com/34ccbaa830.js"></script>
-        <link rel="stylesheet" href="https://use.fontawesome.com/b0710f5540.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="style.css">
         <title>HOME PAGE</title>
@@ -14,34 +14,40 @@
 
     <body>
         <div class="container">
-            <h2>CASI COVID-19 IN <span id="country"></span> <img src=11 id=" flag"></h2>
+            <h2>CASI COVID-19 IN <span id="country"></span></h2>
             <div class="board">
-                <div class="card a"><i class="fa fa-tachometer"></i>
+                <div class="card a">
+                    <i class="fa fa-tachometer"></i>
                     <h5>Positivi</h5>
                     <span id="active"></span>
                 </div>
 
-                <div class="card ca"><i class="fa fa-th-list"></i>
+                <div class="card ca">
+                    <i class="fa fa-th-list"></i>
                     <h5>Casi Totali</h5>
                     <span id="cases"></span>
                 </div>
 
-                <div class="card cr"><i class="fa fa-times-circle"></i>
+                <div class="card cr">
+                    <i class="fa fa-times-circle"></i>
                     <h5>Casi Critici</h5>
                     <span id="critical"></span>
                 </div>
 
-                <div class="card d"><i class="fa fa-times"></i>
+                <div class="card d">
+                    <i class="fa fa-times"></i>
                     <h5>Morti</h5>
                     <span id="death"></span>
                 </div>
 
-                <div class="card r"><i class="fa fa-check-square"></i>
+                <div class="card r">
+                    <i class="fa fa-check-square"></i>
                     <h5>Casi Ricoverati</h5>
                     <span id="recovered"></span>
                 </div>
 
-                <div class="card t"><i class="fa fa-eye"></i>
+                <div class="card t">
+                    <i class="fa fa-eye"></i>
                     <h5>Test Totali Fatti</h5>
                     <span id="tests"></span>
                 </div>
@@ -51,12 +57,13 @@
 </html>
 
 <script type="text/javascript">
-    fetch('https://corona.lmao.ninja/v2/countries/India')
+    fetch('https://corona.lmao.ninja/v2/countries/usa')
     .then((response)=>{
         return response.json();
     })
     .then((data)=>{
-        document.getElementById("flag").src = data.countryInfo.flag;
+        //per debugging
+        console.log(data)
         document.getElementById("country").innerHTML = data.country;
         document.getElementById("cases").innerHTML = data.cases;
         document.getElementById("death").innerHTML = data.death;
