--- a/CoronaVirusApi/index.html
+++ b/CoronaVirusApi/index.html
@@ -5,9 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>index</title>
+    <link rel="stylesheet" href="styleIndex.css">
 </head>
 <body>
-    <button>
-        <a href="/CoronaVirusApi/InfoPerPaese.html">vai alla ricerca</a>
-    </button>
+    <span><a href="/CoronaVirusApi/InfoPerPaese.html">sasso</a></span>
 </html>
