--- a/CoronaVirusApi/InfoPerPaese.html
+++ b/CoronaVirusApi/InfoPerPaese.html
@@ -57,7 +57,7 @@
 </html>
 
 <script type="text/javascript">
-    fetch('https://corona.lmao.ninja/v2/countries/usa')
+    fetch('https://corona.lmao.ninja/v2/countries/italy')
     .then((response)=>{
         return response.json();
     })
