--- a/CoronaVirusApi/InfoPerPaese.html
+++ b/CoronaVirusApi/InfoPerPaese.html
@@ -37,7 +37,7 @@
                 <div class="card d">
                     <i class="fa fa-times"></i>
                     <h5>Morti</h5>
-                    <span id="death"></span>
+                    <span id="deaths"></span>
                 </div>
 
                 <div class="card r">
@@ -66,7 +66,7 @@
         console.log(data)
         document.getElementById("country").innerHTML = data.country;
         document.getElementById("cases").innerHTML = data.cases;
-        document.getElementById("death").innerHTML = data.death;
+        document.getElementById("deaths").innerHTML = data.deaths;
         document.getElementById("recovered").innerHTML = data.recovered;
         document.getElementById("tests").innerHTML = data.tests;
         document.getElementById("active").innerHTML = data.active;
