--- a/CoronaVirusApi/InfoPerPaese.html
+++ b/CoronaVirusApi/InfoPerPaese.html
@@ -67,6 +67,7 @@
         document.getElementById("country").innerHTML = data.country;
         document.getElementById("cases").innerHTML = data.cases;
         document.getElementById("deaths").innerHTML = data.deaths;
+        document.getElementById("critical").innerHTML = data.critical;
         document.getElementById("recovered").innerHTML = data.recovered;
         document.getElementById("tests").innerHTML = data.tests;
         document.getElementById("active").innerHTML = data.active;
